--- a/sp-report/hugo.toml
+++ b/sp-report/hugo.toml
@@ -1,4 +1,5 @@
-baseURL = 'http://127.0.0.1:5500/'
+baseURL = 'https://nguyendhst.github.io/HK231-Specialized-Project'
+canonifyurls = true
 languageCode = 'en-us'
 theme = 'hugo-book'
 title = 'Project Report'
